# Modern-CMake-Template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  sum.cpp
test/: CMakeLists.txt  test.cpp
